--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://raw.githubusercontent.com/CanvasDeno/site/cbc0621c7de567250654c780eaa406b4de3ac71f/Aspx%20Styled.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASPXone Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
