First page build

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">
                 Specializing in Razor Pages, PHP, and ASP.NET Core MVC, ASPXone delivers robust and beautiful web solutions.
             </p>
-            <a href="#services" class="inline-block bg-white text-indigo-700 hover:bg-indigo-100 px-8 py-4 rounded-full text-lg font-semibold shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
-                Explore Our Services
+            <a href="#tools" class="inline-block bg-white text-indigo-700 hover:bg-indigo-100 px-8 py-4 rounded-full text-lg font-semibold shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                Explore Our Tools
             </a>
         </div>
     </section>
@@ -65,7 +65,7 @@
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-gray-50 p-6 rounded-xl shadow-md border border-gray-200">
-                    <h3 class="text-2xl font-semibold text-gray-900 mb-3">D-I VB.NET and Razor</h3>
+                    <h3 class="text-2xl font-semibold text-gray-900 mb-3">Event D-I</h3>
                     <p class="text-gray-600 mb-4">
                         Adding VB.NET support to empower VB.NET developers in web development. We will also add Razor security and support. Up to date and Our first webinar ever happening!
                     </p>
@@ -73,6 +73,7 @@
                 </div>
                 <br>
         </div>
+            <br>
         <div class="bg-gradient-to-r from-indigo-600 to-purple-700 text-white py-20 md:py-16 text-center rounded-b-lg shadow-xl mx-4 mt-2"><h2 class="text-xl">Quick Facts about our Webinars!</h2>
         <br>
         <p style="margin: 20px;"><b>The number of event happening our company time is written roman numbers</b> like if it is our 2nd event it will be "II"</p>
